tests/compilation/examples/fail_note.stderr
error: failed
 --> tests/compilation/examples/fail_note.rs:3:1
  |
3 | #[error_no_help]
  | ^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `error_no_help` (in Nightly builds, run with -Z macro-backtrace for more info)

note: this is Bob
  --> tests/compilation/examples/fail_note.rs:10:1
   |
10 | just_a_note!();
   | ^^^^^^^^^^^^^^
   |
   = note: this note originates in the macro `just_a_note` (in Nightly builds, run with -Z macro-backtrace for more info)
